--- a/Resources/views/NodeControl/index.html.twig
+++ b/Resources/views/NodeControl/index.html.twig
@@ -10,7 +10,7 @@
         </ul>
     {% endfor %}
 
-    <a href="{{ path('cp_nodes') }}" class="btn btn-primary">Create New Menu</a>
+    <a href="{{ path('cp_add_node') }}" class="btn btn-primary">Create New Menu</a>
 {% endblock %}
 
 {% block breadcrumb %}
