--- a/Resources/views/NodeControl/index.html.twig
+++ b/Resources/views/NodeControl/index.html.twig
@@ -2,15 +2,33 @@
 {% extends '::control.html.twig' %}
 
 {% block content %}
-    <h2>Website structure</h2>
 
+<div class="row">
+  <div class="span6" id="nodesContainer">
+    <h4>Website structure</h4>
+
+<div class="tabbable tabs-left">
+  <ul class="nav nav-tabs">
     {% for node in topNodes %}
-        <ul class="node-root">
-            {% include 'BtnNodesBundle:NodeControl:_tree.html.twig' %}
-        </ul>
+        <li {% if loop.first %}class="active"{% endif %}><a href="#node-{{ node.id }}" data-toggle="tab">{{ node.title }}</a></li>
     {% endfor %}
+  </ul>
+  <div class="tab-content">
+    {% for node in topNodes %}
+        <div class="tab-pane {% if loop.first %}active{% endif %}" id="node-{{ node.id }}">
+            {% include 'BtnNodesBundle:NodeControl:_tree.html.twig' %}
+        </div>
+    {% endfor %}
+  </div>
+</div>
 
     <a href="{{ path('cp_add_node') }}" class="btn btn-primary">Create New Menu</a>
+  </div>
+  <div class="span6" id="formContainer">
+      Click on the left side to edit node
+  </div>
+</div>
+
 {% endblock %}
 
 {% block breadcrumb %}
@@ -23,4 +41,15 @@
     %}
         <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
+{% endblock %}
+
+
+{% block javascripts %}
+    {% javascripts
+        '@BtnNodesBundle/Resources/public/js/jq.confirmModal.js'
+        '@BtnNodesBundle/Resources/public/js/jq.selectNodeContent.js'
+        '@BtnNodesBundle/Resources/public/js/node.js'
+    %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
