simple interface to work with the compatible bundles

--- a/Resources/views/NodeControl/_content.html.twig
+++ b/Resources/views/NodeControl/_content.html.twig
@@ -1,3 +1,5 @@
 <div>
-    <h2>Select content for this node</h2>
+    {% for provider in providers %}
+        <a href="#">{{ provider.nodeProvider }}</a> <br/>
+    {% endfor %}
 </div>
