nodes managment for users

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -5,3 +5,40 @@
 .node-title {
     font-size: 16px;
 }
+
+ul.tree, ul.tree ul {
+    list-style: none;
+    background: url(../img/vline.png) repeat-y;
+    margin: 0;
+    padding: 0;
+}
+
+ul.tree ul {
+ margin-left: 10px;
+}
+
+ul.tree li {
+ margin: 0;
+ padding: 0 12px;
+    line-height: 20px;
+     background: url(../img/node.png) no-repeat;
+     font-weight: bold;
+   }
+
+ul.tree li:last-child {
+     background: #fff url(../img/lastnode.png) no-repeat;
+}
+
+ul.tree li em a,
+ul.tree li em {
+    font-size: 12px;
+    color: #ccc;
+}
+
+ul.tree li em.provider {
+    color: #999;
+}
+ul.tree li em.provider a {
+    text-decoration: underline;
+    color: #999;
+}
