--- a/Resources/views/NodeControl/_content.html.twig
+++ b/Resources/views/NodeControl/_content.html.twig
@@ -1,5 +1,7 @@
-<div>
+<ul style="list-style:none">
     {% for provider in providers %}
-        <a href="{{ url('cp_assign_content_for_node', {'id': provider.id, 'node': node}) }}" class="select-bundle">{{ provider.nodeProvider }}</a> <br/>
+        <li style="margin: 10px">
+            <a href="{{ url('cp_assign_content_for_node', {'id': provider.id, 'node': node}) }}" class="select-bundle btn btn-success">{{ provider.name }}</a>
+        </li>
     {% endfor %}
-</div>
+</ul>
