--- a/Resources/views/NodeControl/website.html.twig
+++ b/Resources/views/NodeControl/website.html.twig
@@ -5,20 +5,21 @@
 
 <h4>Website sitemap</h4>
 
-<div class="row-fluid">
+<div class="row-fluid" id="nodesManager">
     {% for node in topNodes %}
         <div class="span6">
-            <ul class="tree">
+            <ul class="tree" id="tree-{{ node.id }}">
                 {% include 'BtnNodesBundle:NodeControl:_simple_tree.html.twig' %}
             </ul>
         </div>
     {% endfor %}
+
+    <div class="span12">
+        <br/><br/>
+        <a href="#" data-modal-title="Create new menu" data-manage-node="{{ url('cp_add_node') }}" class="btn">Create new menu</a>
+    </div>
 </div>
 
-{% endblock %}
-
-{% block breadcrumb %}
-    {{ breadcrumb({'cp_node': 'crud.breadcrumb.list'}) }}
 {% endblock %}
 
 {% block stylesheets %}
@@ -33,8 +34,9 @@
 {% block javascripts %}
     {% javascripts
         '@BtnNodesBundle/Resources/public/js/jq.confirmModal.js'
-        '@BtnNodesBundle/Resources/public/js/jq.selectNodeContent.js'
-        '@BtnNodesBundle/Resources/public/js/node.js'
+        '@BtnNodesBundle/Resources/public/js/jq.nodesTreeManager.js'
+        '@BtnNodesBundle/Resources/public/js/jq.slugify.js'
+        '@BtnNodesBundle/Resources/public/js/nodes.new.js'
     %}
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
