direct link in the nodes entity

--- a/Resources/views/NodeControl/_form.html.twig
+++ b/Resources/views/NodeControl/_form.html.twig
@@ -18,6 +18,7 @@
 
 
 
+    {{ form_row(form.link) }}
     {{ form_row(form.metaTitle) }}
     {{ form_row(form.metaKeywords) }}
     {{ form_row(form.metaDescription) }}
