--- a/Resources/views/NodeControl/website.html.twig
+++ b/Resources/views/NodeControl/website.html.twig
@@ -4,15 +4,14 @@
 
 <h4>Website sitemap</h4>
 
-<div class="row-fluid" id="nodesManager">
+<div class="row-fluid nodes-list" id="nodesManager">
+    <div class="span12"></div>
     {% for node in topNodes %}
-
-                <div class="span6">
-                    <ul class="tree" id="tree-{{ node.id }}">
-                        {% include 'BtnNodesBundle:NodeControl:_simple_tree.html.twig' %}
-                    </ul>
-                </div>
-
+        <div class="span5">
+            <ul class="tree" id="tree-{{ node.id }}">
+                {% include 'BtnNodesBundle:NodeControl:_simple_tree.html.twig' %}
+            </ul>
+        </div>
     {% endfor %}
 
     <div class="span12">
