--- a/Resources/views/NodeControl/_form.html.twig
+++ b/Resources/views/NodeControl/_form.html.twig
@@ -22,6 +22,9 @@
     {{ form_row(form.metaTitle) }}
     {{ form_row(form.metaKeywords) }}
     {{ form_row(form.metaDescription) }}
+    {{ form_row(form.ogTitle) }}
+    {{ form_row(form.ogDescription) }}
+    {{ form_row(form.ogImage) }}
 
       <div class="control-group">
         <div class="controls">
