--- a/Resources/views/NodeControl/index.html.twig
+++ b/Resources/views/NodeControl/index.html.twig
@@ -36,6 +36,7 @@
 {% endblock %}
 
 {% block stylesheets %}
+    {{ parent() }}
     {% stylesheets
         '@BtnNodesBundle/Resources/public/css/*'
     %}
@@ -45,6 +46,7 @@
 
 
 {% block javascripts %}
+    {{ parent() }}
     {% javascripts
         '@BtnNodesBundle/Resources/public/js/jq.confirmModal.js'
         '@BtnNodesBundle/Resources/public/js/jq.selectNodeContent.js'
