--- a/Resources/views/NodeControl/website.html.twig
+++ b/Resources/views/NodeControl/website.html.twig
@@ -16,7 +16,7 @@
 
     <div class="span12">
         <br/><br/>
-        <a href="#" data-modal-title="Create new menu" data-manage-node="{{ url('cp_add_node') }}" class="btn">Create new menu</a>
+        <a href="#" data-modal-title="Create new menu" data-manage-node="{{ url('cp_add_node') }}" class="btn btn-primary">Create new menu</a>
     </div>
 </div>
 
