--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -19,7 +19,7 @@
 
 ul.tree, ul.tree ul {
     list-style: none;
-    background: url(../img/vline.png) repeat-y;
+    background: url('../bundles/btnnodes/img/vline.png') repeat-y;
     margin: 0;
     padding: 0;
 }
@@ -32,12 +32,12 @@ ul.tree li {
  margin: 0;
  padding: 0 12px;
     line-height: 20px;
-     background: url(../img/node.png) no-repeat;
+     background: url('../bundles/btnnodes/img/node.png') no-repeat;
      font-weight: bold;
    }
 
 ul.tree li:last-child {
-     background: #fff url(../img/lastnode.png) no-repeat;
+     background: #fff url('../bundles/btnnodes/img/lastnode.png') no-repeat;
 }
 
 ul.tree li em a,
