--- a/Resources/views/NodeControl/_content.html.twig
+++ b/Resources/views/NodeControl/_content.html.twig
@@ -1,7 +1,7 @@
 <ul style="list-style:none">
     {% for provider in providers %}
         <li style="margin: 10px">
-            <a href="{{ url('cp_assign_content_for_node', {'id': provider.id, 'node': node}) }}" class="select-bundle btn btn-success">{{ provider.name }}</a>
+            <a href="{{ url('cp_assign_content_for_node', {'id': provider.id, 'node': node}) }}" class="select-bundle btn btn-primary">{{ provider.name }}</a>
         </li>
     {% endfor %}
 </ul>
