--- a/Resources/views/NodeControl/_tree.html.twig
+++ b/Resources/views/NodeControl/_tree.html.twig
@@ -4,10 +4,10 @@
         {% if node.provider %}
             {{ node.provider }}
         {% else %}
-            no content attached
+            {% trans %}node.no_content_attached{% endtrans %}
         {% endif %}
     <a href="{{ url('cp_add_node', {'id': node.id}) }}"><i class="icon-plus"></i></a>
-    <a href="{{ url('cp_remove_node', {'id': node.id}) }}" data-confirm="Are you sure you want to delete?" ><i class="icon-minus"></i></a>
+    <a href="{{ url('cp_remove_node', {'id': node.id}) }}" data-confirm="{% trans %}node.delete_confirm{% endtrans %}" ><i class="icon-minus"></i></a>
     <ul>
         {% for node in node.children %}
             {% include 'BtnNodesBundle:NodeControl:_tree.html.twig' %}
