--- a/Resources/views/NodeControl/_form.html.twig
+++ b/Resources/views/NodeControl/_form.html.twig
@@ -27,7 +27,7 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <input type="submit" class="btn btn-success btn-small btn-sm" value="{% trans %}crud.save{% transend %}"/>
+            <input type="submit" class="btn btn-success btn-small btn-sm" value="{% trans %}crud.save{% endtrans %}"/>
         </div>
       </div>
 
