--- a/Resources/views/NodeControl/index.html.twig
+++ b/Resources/views/NodeControl/index.html.twig
@@ -5,7 +5,7 @@
 
 <div class="row">
   <div class="span6" id="nodesContainer">
-    <h4>{% trans %}node.website_structure{% transend %}</h4>
+    <h4>{% trans %}node.website_structure{% endtrans %}</h4>
 
 <div class="tabbable tabs-left">
   <ul class="nav nav-tabs">
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-    <a href="{{ path('cp_add_node') }}" class="btn btn-primary">{% trans %}node.create_new_menu{% transend %}</a>
+    <a href="{{ path('cp_add_node') }}" class="btn btn-primary">{% trans %}node.create_new_menu{% endtrans %}</a>
   </div>
   <div class="span6" id="formContainer">
       {% trans %}node.click_on_left_side_to_edit{% endtrans %}
