--- a/Resources/views/NodeControl/website.html.twig
+++ b/Resources/views/NodeControl/website.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h4>{% trans %}node.website_sitemap{% edntrans %}</h4>
+<h4>{% trans %}node.website_sitemap{% endtrans %}</h4>
 
 <div class="row-fluid nodes-list" id="nodesManager">
     <div class="span12"></div>
