--- a/Resources/views/NodeControl/_form.html.twig
+++ b/Resources/views/NodeControl/_form.html.twig
@@ -29,7 +29,7 @@
       <div class="control-group">
         <div class="controls">
             {{ form_row(form.visible) }}
-            <input type="submit" class="btn btn-small" value="Save changes"/>
+            <input type="submit" class="btn btn-small" value="{% trans %}crud.save{% endtrans %}"/>
         </div>
       </div>
 
