--- a/Resources/views/NodeControl/_simple_tree.html.twig
+++ b/Resources/views/NodeControl/_simple_tree.html.twig
@@ -1,18 +1,18 @@
 <li id="node-{{ node.id }}" >
     {% if node.lvl > 0 %}
-        <a href="#" title="edit" data-modal-title="Edit item settings" data-manage-node="{{ url('cp_edit_node', {'id': node.id}) }}">{{ node.title }}</a> <em>/{{ node.slug }}</em> |
+        <a href="#" title="edit" data-modal-title="{% trans %}node.edit_item_settings{% endtrans %}" data-manage-node="{{ url('cp_edit_node', {'id': node.id}) }}">{{ node.title }}</a> <em>/{{ node.slug }}</em> |
         <em class="provider">
             {% if node.provider %}
                 <a href="#" title="change content" data-manage-content="{{ path('cp_content_for_node', {'node': node.id}) }}">{{ node.provider }}</a> &nbsp;
                 {% if node.controlRoute and node.controlRouteParameters %}<a href="{{ path(node.controlRoute, node.controlRouteParameters) }}">edit</a>{% endif %}
             {% else %}
-                <a href="#" title="attach content" data-manage-content="{{ path('cp_content_for_node', {'node': node.id}) }}">no content assigned</a>
+                <a href="#" title="{% trans %}node.attach_content{% endtrans %}" data-manage-content="{{ path('cp_content_for_node', {'node': node.id}) }}">{% trans %}node.no_content_attached{% endtrans %}</a>
             {% endif %}
         </em>
-        | <em class="node-actions"><a href="#" title="edit" data-modal-title="Create new item" data-manage-node="{{ url('cp_add_node', {'id': node.id}) }}">+</a>
-        <a href="{{ url('cp_remove_node', {'id': node.id}) }}" data-confirm="Are you sure you want to delete?">-</a></em>
+        | <em class="node-actions"><a href="#" title="edit" data-modal-title="{% trans %}node.create_new_item{% endtrans %}" data-manage-node="{{ url('cp_add_node', {'id': node.id}) }}">+</a>
+        <a href="{{ url('cp_remove_node', {'id': node.id}) }}" data-confirm="{% trans %}node.delete_confirm{% endtrans %}">-</a></em>
 
-    {% else %}<h4>{{ node.title }} <em class="node-actions"><a href="#" title="edit" data-modal-title="Create new item" data-manage-node="{{ url('cp_add_node', {'id': node.id}) }}">+</a> <a href="{{ url('cp_remove_node', {'id': node.id}) }}" data-confirm="Are you sure you want to delete?">-</a></em></h4>{% endif %}
+    {% else %}<h4>{{ node.title }} <em class="node-actions"><a href="#" title="edit" data-modal-title="{% trans %}node.create_new_item{% endtrans %}" data-manage-node="{{ url('cp_add_node', {'id': node.id}) }}">+</a> <a href="{{ url('cp_remove_node', {'id': node.id}) }}" data-confirm="{% trans %}node.delete_confirm{% endtrans %}">-</a></em></h4>{% endif %}
     <ul>
         {% for node in node.children %}
             {% include 'BtnNodesBundle:NodeControl:_simple_tree.html.twig' %}
