--- a/Resources/views/NodeControl/_assign_content.html.twig
+++ b/Resources/views/NodeControl/_assign_content.html.twig
@@ -7,7 +7,7 @@
         </p>
 
         <div class="centered">
-            <input type="submit" class="btn btn-small" value="Save changes"/>
+            <input type="submit" class="btn btn-small" value="{% trans %}crud.save{% endtrans %}"/>
         </div>
 
         {{ form_rest(form) }}
